// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-passage redirects to a matched react route 1`] = `
<p>
  Redirected!
</p>
`;

exports[`react-passage when a route is matched matches the snapshot 1`] = `
<a
  data-passage-link-type="pushState"
  href="/get-started/plan/shave"
  onClick={[Function]}
>
  Shave Core
</a>
`;

exports[`react-passage when a route is matched supports native overrides 1`] = `
<a
  data-passage-link-type="anchor"
  href="/get-started/plan/shave"
>
  Shave Core
</a>
`;

exports[`react-passage when a route is unmatched matches the snapshot 1`] = `
<a
  data-passage-link-type="pushState"
  href="/blades"
  onClick={[Function]}
>
  Blades
</a>
`;

exports[`react-passage when there is no context matches the snapshot 1`] = `
<a
  data-passage-link-type="anchor"
  href="/blades"
>
  Blades
</a>
`;
